generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  ADMIN
  USER
}

enum RoomStatus {
  AVAILABLE
  BOOKED
  MAINTENANCE
}

enum BookingStatus {
  PENDING
  CONFIRMED
  CANCELLED
}

model User {
  id       String    @id @default(uuid())
  name     String
  email    String    @unique
  password String
  role     UserRole  @default(USER)
  bookings Booking[]
  createdAt DateTime @default(now())
}

model Room {
  id       String      @id @default(uuid())
  number   String      @unique
  type     String
  status   RoomStatus  @default(AVAILABLE)
  bookings Booking[]
}

model Booking {
  id        String        @id @default(uuid())
  user      User         @relation(fields: [userId], references: [id])
  userId    String
  room      Room         @relation(fields: [roomId], references: [id])
  roomId    String
  checkIn   DateTime
  checkOut  DateTime
  status    BookingStatus @default(PENDING)
  createdAt DateTime     @default(now())
}
